<resources>
    <string name="app_name">InmobiliariaV1</string>
    <string name="title_activity_menu_left">MenuLeft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Propiedad</string>
    <string name="menu_gallery">Inquilino</string>
    <string name="menu_slideshow">Pagos</string>
    <string name="menu_tools">Perfil</string>
    <string name="menu_share">Contrato</string>
    <string name="menu_send">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
